--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!-- <script type="text/javascript"
+ 		src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places,visualization">
+  </script> -->
+  <script type="text/javascript" 
+        src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyDgNW8A9SvxtI0DazJOJ7x652I2BdhWxdg"></script>
 </head>
 <body>
   <div id="app">APPLICATION CONTENT</div>
