try to display the map.

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
   <!-- <script type="text/javascript"
  		src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places,visualization">
   </script> -->
-  <script type="text/javascript" 
-        src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyDgNW8A9SvxtI0DazJOJ7x652I2BdhWxdg"></script>
+  <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places,visualization">
+</script>
+
 </head>
 <body>
   <div id="app">APPLICATION CONTENT</div>
